test/tests/bad/recursive-var-def.carth
;; RecursiveVarDef

(def foo :of Int (+ foo 1))
